--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,16 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 6.0.0-M2 (2020-08-12)
+----------------------------------------
+* DATAGRAPH-1358 - Add support for configuring SDN 6 in a CDI context.
+* DATAGRAPH-1357 - Add support for java.net.URI attributes.
+* DATAGRAPH-1351 - Apply possible conversions for ids during delete.
+* DATAGRAPH-1350 - Incoming relationships are not treated correctly when using custom queries.
+* DATAGRAPH-1333 - Migrate SDN/RX as a replacement for SDN.
+* DATAGRAPH-1328 - Release 6.0 M2 (2020.0.0).
+
+
 Changes in version 5.3.2.RELEASE (2020-07-22)
 ---------------------------------------------
 * DATAGRAPH-1335 - Upgrade to Neo4j OGM 3.2.14.
@@ -1767,6 +1777,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
