--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.3.RELEASE (2020-08-12)
+---------------------------------------------
+* DATAGRAPH-1338 - Release 5.3.3 (Neumann SR3).
+
+
 Changes in version 6.0.0-M2 (2020-08-12)
 ----------------------------------------
 * DATAGRAPH-1358 - Add support for configuring SDN 6 in a CDI context.
@@ -1783,6 +1788,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
