--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,25 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.1.20.RELEASE (2020-09-16)
+----------------------------------------------
+* DATAGRAPH-1370 - Upgrade to Neo4j-OGM 3.1.22.
+* DATAGRAPH-1368 - Fix included OGM docs.
+* DATAGRAPH-1367 - Ensure all tests classes end with *Tests.
+* DATAGRAPH-1365 - Upgrade to Neo4j OGM 3.1.21.
+* DATAGRAPH-1336 - Release 5.1.20 (Lovelace SR20).
+* DATAGRAPH-1332 - Use Pageable#getOffset instead of a fixed computation.
+* DATAGRAPH-1303 - AnnotationInfo fails on package private, unrelated annotations.
+* DATAGRAPH-1260 - Align ID assertion logic in all variants of findById().
+* DATAGRAPH-1249 - Mapping Context not flushed even though node attributes changed.
+* DATAGRAPH-1228 - Cleanup Neo4jQueryPlaceholderSupplier.
+* DATAGRAPH-1212 - Improve fallback IsNewStrategy.
+* DATAGRAPH-1184 - @Query annotated methods cannot deal with Optional return values.
+* DATAGRAPH-1156 - Saving two entities with a relationship and UUID as id results in exception.
+* DATAGRAPH-1030 - Avoid unconditional registration of entities in Neo4jMappingContext from all scanned classes.
+* DATAGRAPH-1018 - Ensure query parameters for derived finders are converted.
+
+
 Changes in version 5.3.3.RELEASE (2020-08-12)
 ---------------------------------------------
 * DATAGRAPH-1338 - Release 5.3.3 (Neumann SR3).
@@ -1788,6 +1807,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
