Ensure behavior of SDC, add docs.
Also fix sdc-includes

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -19,12 +19,12 @@ endif::[]
 
 include::{manualIncludeDir}/README.adoc[tags=properties]
 
-:gh-base: https://github.com/neo4j/SDN
+:gh-base: https://github.com/spring-projects/spring-data-neo4j
 :java-driver-starter-href: https://github.com/neo4j/neo4j-java-driver-spring-boot-starter
-:springVersion: 5.2.0.RELEASE
+:springVersion: 5.3.0-RC1
 :spring-framework-docs: https://docs.spring.io/spring/docs/{springVersion}/spring-framework-reference
 :spring-framework-javadoc: https://docs.spring.io/spring/docs/{springVersion}/javadoc-api
-:spring-data-commons-docs: ../../../../../other-spring-data/spring-data-commons/src/main/asciidoc
+:spring-data-commons-docs: ../../../../../spring-data-commons/src/main/asciidoc
 
 (C) 2008-2020 The original authors.
 
@@ -52,6 +52,8 @@ include::getting-started/index.adoc[]
 include::object-mapping/index.adoc[]
 
 include::{spring-data-commons-docs}/repository-projections.adoc[leveloffset=+1]
+
+include::object-mapping/projections.adoc[leveloffset=+1,lines=5..]
 
 include::testing/index.adoc[]
 
