--- a/src/main/asciidoc/testing/testing.adoc
+++ b/src/main/asciidoc/testing/testing.adoc
@@ -1,18 +1,64 @@
 [[testing]]
 = Testing
 
-We offer `org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest` and `org.springframework.boot.test.autoconfigure.data.neo4j.ReactiveDataNeo4jTest`
-inside an additional module under the following coordinates:
-`org.springframework.data.neo4j:spring-data-neo4j-spring-boot-test-autoconfigure`.
-Include the following dependency in your project setup
+== Without Spring Boot
+
+We work a lot with our abstract base classes for configuration in our own integration tests. They can be use like this:
+
+[source,java]
+.One possible test setup without Spring Boot
+----
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.neo4j.driver.AuthTokens;
+import org.neo4j.driver.Driver;
+import org.neo4j.driver.GraphDatabase;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.data.neo4j.config.AbstractNeo4jConfig;
+import org.springframework.data.neo4j.core.Neo4jTemplate;
+import org.springframework.data.neo4j.repository.config.EnableNeo4jRepositories;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.transaction.annotation.EnableTransactionManagement;
+
+@ExtendWith(SpringExtension.class)
+class YourIntegrationTest {
+
+	@Test
+	void thingsShouldWork(@Autowired Neo4jTemplate neo4jTemplate) {
+		// Add your test
+	}
+
+	@Configuration
+	@EnableNeo4jRepositories(considerNestedRepositories = true)
+	@EnableTransactionManagement
+	static class Config extends AbstractNeo4jConfig {
+
+		@Bean
+		public Driver driver() {
+			return GraphDatabase.driver("bolt://yourtestserver:7687", AuthTokens.none()); // <.>
+		}
+	}
+}
+----
+. Here you should provide a connection to your test server or container.
+
+Similar classes are provided for reactive tests.
+
+[[dataneo4jtest]]
+== With Spring Boot and `@DataNeo4jTest`
+
+Spring Boot offers `@DataNeo4jTest` through `org.springframework.boot:spring-boot-starter-test`.
+The later brings in `org.springframework.boot:spring-boot-test-autoconfigure` which contains the annotion and the
+required infrastructure code.
 
 [source,xml,subs="verbatim,attributes"]
-.spring-data-neo4j-spring-boot-test-autoconfigure for Maven
+.Include Spring Boot Starter Test in a Maven build
 ----
 <dependency>
-    <groupId>org.springframework.data.neo4j</groupId>
-    <artifactId>spring-data-neo4j-spring-boot-test-autoconfigure</artifactId>
-    <version>{version}</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
     <scope>test</scope>
 </dependency>
 ----
@@ -20,207 +66,343 @@ Include the following dependency in your project setup
 Or with Gradle
 
 [source,groovy,subs="verbatim,attributes"]
-.spring-data-neo4j-spring-boot-test-autoconfigure for Gradle
+.Include Spring Boot Starter Test in a Gradle build
 ----
 dependencies {
-    testImplementation 'org.springframework.data.neo4j:spring-data-neo4j-spring-boot-test-autoconfigure:{version}'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 ----
 
-Both `@DataNeo4jTest` and `@ReactiveDataNeo4jTest` are Spring Boot https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-testing[test slices].
-By default, they provide the Neo4j test harness through the transitive dependency of https://github.com/neo4j/neo4j-java-driver-spring-boot-starter/tree/master/neo4j-java-driver-test-harness-spring-boot-autoconfigure[neo4j-java-driver-test-harness-spring-boot-autoconfigure].
-Both slices provide all the necessary infrastructure for tests using Neo4j: A driver bean, a transaction manager, a client, a template and declared repositories, in their imperative or reactive variants.
-`@DataNeo4jTest` provides both variants if reactive repositories are enabled while `@ReactiveDataNeo4jTest` provides only reactive infrastructure.
-
-The dependencies include the Neo4j test harness in version 3.5.x by default.
-Thus, reactive database access and multiple databases cannot be tested out of the box.
-The reason for doing this is simple: Spring Data's JDK baseline is JDK 8. The Neo4j test harness in version 4 requires JDK 11+, so we cannot make it the default.
-
-Here are the available options.
-Both test slices include `@ExtendWith(SpringExtension.class)` so that they run automatically with JUnit 5 (JUnit Jupiter).
-
-[[dataneo4jtest]]
-== `@DataNeo4jTest`
+`@DataNeo4jTest` is a Spring Boot https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-testing[test slice].
+The test slice provides all the necessary infrastructure for tests using Neo4j: A transaction manager, a client, a template and declared repositories, in their imperative or reactive variants,
+depending on reactive dependencies present or not.
+The test slice already includes `@ExtendWith(SpringExtension.class)` so that it runs automatically with JUnit 5 (JUnit Jupiter).
 
 `@DataNeo4jTest` provides both imperative and reactive infrastructure by default.
-If you annotate a test with it the test becomes `@Transactional`.
+It does *not* make your test `@Transactional` however.
 
-`@Transactional` in Spring tests always means imperative transactional, as declarative transactions needs the return type of a method to decide whether the imperative `PlatformTransactionManager` or the reactive `ReactiveTransactionManager` kicks in.
-This is the reason you cannot use `@DataNeo4jTest` with setting `spring.data.neo4j.repositories.type` to `reactive` as this disables imperative infrastructure.
+`@Transactional` in Spring tests however always means imperative transactional,
+as declarative transactions needs the return type of a method to decide whether the imperative `PlatformTransactionManager`
+or the reactive `ReactiveTransactionManager` is needed. Testmethods however don't return anything and neither the
+Spring Framework itself, the testing framework or Spring Data Neo4j can decide this in a reliable way for the user.
 
-=== With Neo4j test harness
+IMPORTANT: Make sure to add `@Transactional` to your test class in case you want to test imperative transactions
+           that should be automatically rolled back after the test.
+           To assert the correct transactional behaviour for reactive repositories or services, you will need to
+           inject a `TransactionalOperator` into the test or wrap your domain logic in services that use annotated
+           methods exposing a return type that makes it possible for the infrastructure to select the correct
+           transaction manager.
 
-This is the default.
-See the <<imperative-template-example, imperative template example test>>.
-This class uses the included Neo4j test harness 3.5 by default.
 
-[source,java]
-[[dataneo4jtest-template-example]]
-.TemplateExampleTest.java
-----
-include::../../../../src/test/java/org/springframework/data/neo4j/documentation/spring_boot/TemplateExampleTest.java[tags=testing.dataneo4jtest]
-----
+The test slice does not bring in an embedded database or any other connection setting.
+It is up to you to use an appropriate connection.
 
-=== With Neo4j 4.0 test harness
+We recommend one of two options: Either use the https://www.testcontainers.org/modules/databases/neo4j/[Neo4j Testcontainers module]
+or the Neo4j test harness.
+While Testcontainers is a known project with modules for a lot of different services, Neo4j test harness is rather unknown.
+It is an embedded instance that is especially useful when testing stored procedures as described in https://medium.com/neo4j/testing-your-neo4j-based-java-application-34bef487cc3c[Testing your Neo4j-based Java application].
+The test harness can however be used to test an application as well.
+As it brings up a database inside the same JVM as your application, performance and timings may not reassemble your production setup.
 
-Include the following dependency in your project setup
+For your convinience we provide three possible scenarios, Neo4j test harness 3.5 and 4.0 as well as Testcontainers Neo4j.
+We provide different examples for 3.5 and 4.0 as the test harness changed between those versions.
+Also, 4.0 requires JDK 11.
 
-[source,xml,subs="verbatim,attributes"]
-.Neo4j 4.0 test harness for Maven
+[[dataneo4jtest-harness35]]
+=== `@DataNeo4jTest` with Neo4j test harness 3.5
+
+You need the following dependencies to run <<dataneo4jtest-harness35-example>>:
+
+[source,xml]
+.Neo4j 4.0 test harness dependencies
 ----
 <dependency>
     <groupId>org.neo4j.test</groupId>
     <artifactId>neo4j-harness</artifactId>
-    <version>{neo4j-version}</version>
+    <version>3.5.21</version>
     <scope>test</scope>
 </dependency>
 ----
 
-Or if you like Gradle better:
+The dependencies for the enterprise version of Neo4j 3.5 are available under the `com.neo4j.test:neo4j-harness-enterprise` and
+an appropriate repository configuration.
 
-[source,groovy,subs="verbatim,attributes"]
-.Neo4j 4.0 test harness for Gradle
-----
-dependencies {
-    testImplementation 'org.neo4j.test:neo4j-harness:{neo4j-version}'
-}
-----
-
-IMPORTANT: The test setup doesn't change. `@DataNeo4jTest` is enough.
-
-This setup works with both imperative and reactive infrastructure.
-
-=== With Testcontainers
-
-Bring in the required dependencies:
-
-[source,xml]
-[[testcontainers-dependencies]]
-.Dependencies for Testcontainers
-----
-<dependency>
-        <groupId>org.springframework.data.neo4j</groupId>
-        <artifactId>spring-data-neo4j-spring-boot-test-autoconfigure</artifactId>
-        <version>{version}</version>
-        <scope>test</scope>
-        <exclusions>
-                <exclusion> <!--.-->
-                        <groupId>org.neo4j.test</groupId>
-                        <artifactId>neo4j-harness</artifactId>
-                </exclusion>
-        </exclusions>
-</dependency>
-<dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>1.13.0</version>
-        <scope>test</scope>
-</dependency>
-<dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>neo4j</artifactId>
-        <version>1.13.0</version>
-        <scope>test</scope>
-</dependency>
-
-----
-<.> Be aware of this exclusion.
-If you don't exclude that dependency, it will have precedence over any manual configuration of the Neo4j URL.
-
-As of Spring Framework 5.2.5, the TestContext framework provides support for dynamic property sources via the `@DynamicPropertySource` annotation.
-This annotation can be used in integration tests that need to add properties with dynamic values.
-For more information, have a look at the https://docs.spring.io/spring-framework/docs/current/spring-framework-reference/testing.html#testcontext-ctx-management-dynamic-property-sources[Spring Framework reference].
-
-A `@DataNeo4jTest` using `@DynamicPropertySource` together with Testcontainers looks like this:
-
+[[dataneo4jtest-harness35-example]]
 [source,java]
-[[configure-your-container-source]]
-.Configure your Neo4j URLs dynamically in a Spring Boot Test
+.Using Neo4j 3.5 test harness
 ----
-import org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest;
+import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Optional;
+
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.neo4j.harness.ServerControls;
+import org.neo4j.harness.TestServerBuilders;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest;
+import org.springframework.data.neo4j.core.Neo4jClient;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 
-import org.testcontainers.containers.Neo4jContainer;
-import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
-
-@Testcontainers
 @DataNeo4jTest
-class ExampleTest {
+class MovieRepositoryTest {
 
-    @Container
-    private static Neo4jContainer<?> neo4jContainer = new Neo4jContainer<>("neo4j:4.0");
+	private static ServerControls embeddedDatabaseServer;
 
-    @DynamicPropertySource
-    static void neo4jProperties(DynamicPropertyRegistry registry) {
-        registry.add("org.neo4j.driver.uri", neo4jContainer::getBoltUrl);
-        registry.add("org.neo4j.driver.authentication.username", () -> "neo4j");
-        registry.add("org.neo4j.driver.authentication.password", neo4jContainer::getAdminPassword);
+	@BeforeAll
+	static void initializeNeo4j() {
+
+		embeddedDatabaseServer = TestServerBuilders.newInProcessBuilder() // <.>
+			.newServer();
+	}
+
+	@AfterAll
+	static void stopNeo4j() {
+
+		embeddedDatabaseServer.close(); // <.>
+	}
+
+	@DynamicPropertySource  // <.>
+	static void neo4jProperties(DynamicPropertyRegistry registry) {
+
+		registry.add("spring.neo4j.uri", embeddedDatabaseServer::boltURI);
+		registry.add("spring.neo4j.authentication.username", () -> "neo4j");
+		registry.add("spring.neo4j.authentication.password", () -> null);
+	}
+
+	@Test
+	public void findSomethingShouldWork(@Autowired Neo4jClient client) {
+
+		Optional<Long> result = client.query("MATCH (n) RETURN COUNT(n)")
+			.fetchAs(Long.class)
+			.one();
+		assertThat(result).hasValue(0L);
+	}
+}
+----
+<.> Entrypoint to create an embedded Neo4j
+<.> This is a Spring Boot annotation that allows for dynamically registered
+application properties. We overwrite the corresponding Neo4j settings.
+<.> Shutdown Neo4j after all tests.
+
+[[dataneo4jtest-harness40]]
+=== `@DataNeo4jTest` with Neo4j test harness 4.0+
+
+You need the following dependencies to run <<dataneo4jtest-harness40-example>>:
+
+[source,xml]
+.Neo4j 4.0 test harness dependencies
+----
+<dependency>
+    <groupId>org.neo4j.test</groupId>
+    <artifactId>neo4j-harness</artifactId>
+    <version>4.0.8</version>
+    <scope>test</scope>
+    <exclusions>
+        <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
+----
+
+The dependencies for the enterprise version of Neo4j 4.x are available under the `com.neo4j.test:neo4j-harness-enterprise` and
+an appropriate repository configuration.
+
+[[dataneo4jtest-harness40-example]]
+[source,java]
+.Using Neo4j 4.0+ test harness
+----
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.util.Optional;
+
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.neo4j.harness.Neo4j;
+import org.neo4j.harness.Neo4jBuilders;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest;
+import org.springframework.data.neo4j.core.Neo4jClient;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
+
+@DataNeo4jTest
+class MovieRepositoryTest {
+
+	private static Neo4j embeddedDatabaseServer;
+
+	@BeforeAll
+	static void initializeNeo4j() {
+
+		embeddedDatabaseServer = Neo4jBuilders.newInProcessBuilder() // <.>
+			.withDisabledServer() // <.>
+			.build();
+	}
+
+	@DynamicPropertySource // <.>
+	static void neo4jProperties(DynamicPropertyRegistry registry) {
+
+		registry.add("spring.neo4j.uri", embeddedDatabaseServer::boltURI);
+		registry.add("spring.neo4j.authentication.username", () -> "neo4j");
+		registry.add("spring.neo4j.authentication.password", () -> null);
+	}
+
+	@AfterAll
+	static void stopNeo4j() {
+
+		embeddedDatabaseServer.close(); // <.>
+	}
+
+	@Test
+	public void findSomethingShouldWork(@Autowired Neo4jClient client) {
+
+		Optional<Long> result = client.query("MATCH (n) RETURN COUNT(n)")
+			.fetchAs(Long.class)
+			.one();
+		assertThat(result).hasValue(0L);
+	}
+}
+----
+<.> Entrypoint to create an embedded Neo4j
+<.> Don't need Neoj4's HTTP server
+<.> This is a Spring Boot annotation that allows for dynamically registered
+    application properties. We overwrite the corresponding Neo4j settings.
+<.> Shutdown Neo4j after all tests.
+
+
+[[dataneo4jtest-testcontainers]]
+=== `@DataNeo4jTest` with Testcontainers Neo4j
+
+The principal of configuring the connection is of course still the same with Testcontainers as shown in <<dataneo4jtest-testcontainers-example>>.
+You need the following dependencies:
+
+[source,xml]
+----
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>neo4j</artifactId>
+    <version>1.14.2</version>
+    <scope>test</scope>
+</dependency>
+----
+
+And a complete test:
+
+[[dataneo4jtest-testcontainers-example]]
+[source,java]
+.Using Test containers
+----
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.util.Optional;
+
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest;
+import org.springframework.data.neo4j.core.Neo4jClient;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
+import org.testcontainers.containers.Neo4jContainer;
+
+@DataNeo4jTest
+class MovieRepositoryTCTest {
+
+	private static Neo4jContainer<?> neo4jContainer;
+
+	@BeforeAll
+	static void initializeNeo4j() {
+
+		neo4jContainer = new Neo4jContainer<>()
+			.withAdminPassword("somePassword");
+		neo4jContainer.start();
+	}
+
+	@AfterAll
+	static void stopNeo4j() {
+
+		neo4jContainer.close();
+	}
+
+	@DynamicPropertySource
+	static void neo4jProperties(DynamicPropertyRegistry registry) {
+
+		registry.add("spring.neo4j.uri", neo4jContainer::getBoltUrl);
+		registry.add("spring.neo4j.authentication.username", () -> "neo4j");
+		registry.add("spring.neo4j.authentication.password", neo4jContainer::getAdminPassword);
+	}
+
+	@Test
+	public void findSomethingShouldWork(@Autowired Neo4jClient client) {
+
+		Optional<Long> result = client.query("MATCH (n) RETURN COUNT(n)")
+			.fetchAs(Long.class)
+			.one();
+		assertThat(result).hasValue(0L);
+	}
+}
+----
+
+=== Alternatives to a `@DynamicPropertySource`
+
+There are some scenarios in which the above annotation does not fit your usecase.
+One of those might be that you want to have 100% control over how the driver is initialized.
+With a test container running, you could do this with a nested, static configuration class like this:
+
+[source,java]
+----
+@TestConfiguration(proxyBeanMethods = false)
+static class TestNeo4jConfig {
+
+    @Bean
+    Driver driver() {
+        return GraphDatabase.driver(
+        		neo4jContainer.getBoltUrl(),
+        		AuthTokens.basic("neo4j", neo4jContainer.getAdminPassword())
+        );
     }
 }
 ----
 
-An alternative to this approach in older versions of Spring Boot and the Spring Framework is an initializer that looks like this:
+If you want to use the properties but cannot use a `@DynamicPropertySource`, you would use an initializer:
 
 [source,java]
-.Alternative injection of dynamic properties prior to Spring Boot 2.2.6
+.Alternative injection of dynamic properties
 ----
-@Testcontainers
 @ContextConfiguration(initializers = PriorToBoot226Test.Initializer.class)
 @DataNeo4jTest
 class PriorToBoot226Test {
 
-    @Container
-    private static Neo4jContainer<?> neo4jContainer = new Neo4jContainer<>("neo4j:4.0");
+    private static Neo4jContainer<?> neo4jContainer;
+
+    @BeforeAll
+    static void initializeNeo4j() {
+
+        neo4jContainer = new Neo4jContainer<>()
+            .withAdminPassword("somePassword");
+        neo4jContainer.start();
+    }
+
+    @AfterAll
+    static void stopNeo4j() {
+
+        neo4jContainer.close();
+    }
 
     static class Initializer implements ApplicationContextInitializer<ConfigurableApplicationContext> {
         public void initialize(ConfigurableApplicationContext configurableApplicationContext) {
             TestPropertyValues.of(
-                "org.neo4j.driver.uri=" + neo4jContainer.getBoltUrl(),
-                "org.neo4j.driver.authentication.username=neo4j",
-                "org.neo4j.driver.authentication.password=" + neo4jContainer.getAdminPassword()
+                "spring.neo4j.uri=" + neo4jContainer.getBoltUrl(),
+                "spring.neo4j.authentication.username=neo4j",
+                "spring.neo4j.authentication.password=" + neo4jContainer.getAdminPassword()
             ).applyTo(configurableApplicationContext.getEnvironment());
         }
     }
 }
-----
-
-[IMPORTANT]
-====
-If you dont want to exclude `org.neo4j.test:neo4j-harness` as advised in <<testcontainers-dependencies>>, you can manually exclude the `Neo4jTestHarnessAutoConfiguration.class` from the test slice like this:
-
-[source,java]
-----
-import org.neo4j.driver.springframework.boot.test.autoconfigure.Neo4jTestHarnessAutoConfiguration;
-import org.springframework.boot.test.autoconfigure.data.neo4j.DataNeo4jTest;
-
-import org.testcontainers.junit.jupiter.Testcontainers;
-
-@Testcontainers
-@DataNeo4jTest(excludeAutoConfiguration = Neo4jTestHarnessAutoConfiguration.class)
-public class TemplateExampleTest {
-    // Configuration of Neo4j connection as above.
-}
-----
-====
-
-[[reactivedataneo4jtest]]
-== `@ReactiveDataNeo4jTest`
-
-Everything said about `@DataNeo4jTest` applies to `@ReactiveDataNeo4jTest` as well.
-However, `@ReactiveDataNeo4jTest` enables reactive infrastructure only and is not meta-annotated with `@Transactional`, thus it doesn't depend on a `PlatformTransactionManager`.
-
-`@ReactiveDataNeo4jTest` also checks whether the Neo4j instance configured is capable of handling reactive connections.
-
-Our recommendation is to use it together with Testcontainers and exclude the Neo4j test harness dependency.
-
-A typical example would look like this:
-
-[source,java]
-[[reactivedataneo4jtest-repository-example]]
-.RepositoryIT.java
-----
-include::../../../../src/test/java/org/springframework/data/neo4j/documentation/spring_boot/RepositoryIT.java[tags=testing.reactivedataneo4jtest]
 ----
